--- a/examples/vsphere-machinedeployment.yaml
+++ b/examples/vsphere-machinedeployment.yaml
@@ -55,7 +55,10 @@ spec:
             # Can also be set via the env var 'VSPHERE_ALLOW_INSECURE' on the machine-controller
             allowInsecure: true
             cpus: 2
-            MemoryMB: 2048
+            memoryMB: 2048
+            # Optional: Resize the root disk to this size. Must be bigger than the existing size
+            # Default is to leave the disk at the same size as the template
+            diskSizeGB: 10
           operatingSystem: "ubuntu"
           operatingSystemSpec:
             distUpgradeOnBoot: false
