--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,16 +8,27 @@ run:
 
 linters:
   enable:
-    - govet
     - golint
-    - varcheck
+    - govet
+    - gofmt
     - structcheck
+    - varcheck
+    - interfacer
+    - unconvert
+    - ineffassign
+    - goconst
+    - gocyclo
+    - maligned
+    - misspell
     - gosimple
     - unused
     - errcheck
+  disable-all: true
 
 issues:
   exclude:
   - should have comment or be unexported
   - should have comment \\(or a comment on this block\\) or be unexported
   - func Convert_MachinesV1alpha1Machine_To_ClusterV1alpha1Machine should be ConvertMachinesV1alpha1MachineToClusterV1alpha1Machine
+  - 'counter\.Set is deprecated: Use NewConstMetric'
+  - 'eviction\.go:221:4: the surrounding loop is unconditionally terminated'
