--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -203,6 +203,10 @@ spec:
             - -logtostderr
             - -v=6
             - -listen-address=0.0.0.0:9876
+            # Machines that fail to join the cluster within this timeout and
+            # are owned by a MachineSet will get deleted so the MachineSet
+            # controller re-creates them
+            - -join-cluster-timeout=10m
           volumeMounts:
             - name: machine-controller-admission-cert
               mountPath: /tmp/cert
