--- a/pkg/apis/cluster/v1alpha1/conversions/testdata/clusterv1alpha1machineWithProviderConfig/hetzner.yaml
+++ b/pkg/apis/cluster/v1alpha1/conversions/testdata/clusterv1alpha1machineWithProviderConfig/hetzner.yaml
@@ -1,23 +1,22 @@
 apiVersion: cluster.k8s.io/v1alpha1
-kind: MachineDeployment
+kind: Machine
 metadata:
   name: hetzner-machine
   namespace: kube-system
 spec:
-  spec:
-    providerConfig:
-      value:
-        cloudProvider: hetzner
-        cloudProviderSpec:
-          datacenter: ''
-          location: fsn1
-          serverType: cx11
-          token: << HETZNER_TOKEN >>
-        operatingSystem: << OS_NAME >>
-        operatingSystemSpec:
-          disableAutoUpdate: true
-          distUpgradeOnBoot: false
-        sshPublicKeys:
-        - << YOUR_PUBLIC_KEY >>
-    versions:
-      kubelet: << KUBERNETES_VERSION >>
+  providerConfig:
+    value:
+      cloudProvider: hetzner
+      cloudProviderSpec:
+        datacenter: ''
+        location: fsn1
+        serverType: cx11
+        token: << HETZNER_TOKEN >>
+      operatingSystem: << OS_NAME >>
+      operatingSystemSpec:
+        disableAutoUpdate: true
+        distUpgradeOnBoot: false
+      sshPublicKeys:
+      - << YOUR_PUBLIC_KEY >>
+  versions:
+    kubelet: << KUBERNETES_VERSION >>
