--- a/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machineWithProviderConfig/hetzner.yaml
+++ b/pkg/apis/cluster/v1alpha1/conversions/testdata/migrated_clusterv1alpha1machineWithProviderConfig/hetzner.yaml
@@ -1,5 +1,5 @@
 apiVersion: cluster.k8s.io/v1alpha1
-kind: MachineDeployment
+kind: Machine
 metadata:
   creationTimestamp: null
   name: hetzner-machine
@@ -7,7 +7,20 @@ metadata:
 spec:
   metadata:
     creationTimestamp: null
-  providerSpec: {}
+  providerSpec:
+    value:
+      cloudProvider: hetzner
+      cloudProviderSpec:
+        datacenter: ""
+        location: fsn1
+        serverType: cx11
+        token: << HETZNER_TOKEN >>
+      operatingSystem: << OS_NAME >>
+      operatingSystemSpec:
+        disableAutoUpdate: true
+        distUpgradeOnBoot: false
+      sshPublicKeys:
+      - << YOUR_PUBLIC_KEY >>
   versions:
-    kubelet: ""
+    kubelet: << KUBERNETES_VERSION >>
 status: {}
