--- a/test/e2e/provisioning/testdata/machinedeployment-linode.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-linode.yaml
@@ -1,35 +1,22 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  # If you change the namespace/name, you must also
-  # adjust the rbac rules
-  name: machine-controller-linode
-  namespace: kube-system
-type: Opaque
-stringData:
-  token: << LINODE_TOKEN >>
----
 apiVersion: "cluster.k8s.io/v1alpha1"
 kind: MachineDeployment
 metadata:
-  name: linode-machinedeployment
+  name: << MACHINE_NAME >>
   namespace: kube-system
 spec:
-  paused: false
   replicas: 1
   strategy:
     type: RollingUpdate
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
-  minReadySeconds: 0
   selector:
     matchLabels:
-      foo: bar
+      name: << MACHINE_NAME >>
   template:
     metadata:
       labels:
-        foo: bar
+        name: << MACHINE_NAME >>
     spec:
       providerSpec:
         value:
@@ -37,20 +24,17 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "linode"
           cloudProviderSpec:
-          # If empty, can be set via LINODE_TOKEN env var
-            token:
-              secretKeyRef:
-                namespace: kube-system
-                name: machine-controller-linode
-                key: token
+            token: << LINODE_TOKEN >>
             region: eu-west
             type: g6-standard-2
             backups: false
             private_networking: true
             tags:
               - "machine-controller"
-          operatingSystem: "ubuntu"
+          # Can be 'ubuntu'
+          operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
+            distUpgradeOnBoot: false
             disableAutoUpdate: true
       versions:
-        kubelet: 1.9.6
+        kubelet: "<< KUBERNETES_VERSION >>"
