--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -119,3 +119,7 @@ required = [
 [[constraint]]
   name = "github.com/patrickmn/go-cache"
   version = "2.1.0"
+
+[[constraint]]
+  name = "google.golang.org/api"
+  version = "0.1.0"
