--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
@@ -1,25 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: kubevirt-config
-  namespace: kubevirt
-  labels:
-    kubevirt.io: ""
-data:
-  feature-gates: "DataVolumes"
----
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: alpine-dv
-spec:
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/data"
----
 apiVersion: "cluster.k8s.io/v1alpha1"
 kind: MachineDeployment
 metadata:
@@ -48,6 +26,8 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
+            pvcStorage: "10Gi"
+            sourceUrl: http://10.109.79.210/<< OS_NAME >>.img
             cpus: "1"
             memory: "2048M"
             registryImage: quay.io/kubermatic/machine-controller-kubevirt:<< OS_NAME >>-2
