--- a/examples/kubevirt-machinedeployment.yaml
+++ b/examples/kubevirt-machinedeployment.yaml
@@ -26,6 +26,9 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
+            storageClassName: kubermatic-fast
+            pvcSize: "10Gi"
+            sourceURL: http://10.109.79.210/<< OS_NAME >>.img
             cpus: "1"
             memory: "2048M"
             config:
