--- a/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-kubevirt.yaml
@@ -26,7 +26,8 @@ spec:
             - "<< YOUR_PUBLIC_KEY >>"
           cloudProvider: "kubevirt"
           cloudProviderSpec:
-            pvcStorage: "10Gi"
+            storageClassName: kubermatic-fast
+            pvcSize: "10Gi"
             sourceURL: http://10.109.79.210/<< OS_NAME >>.img
             cpus: "1"
             memory: "4096M"
