--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -151,3 +151,7 @@ required = [
 [[constraint]]
   name = "github.com/kubevirt/client-go"
   version = "^0.19.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/cherryservers/cherrygo"
