--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -143,3 +143,7 @@ required = [
 [[constraint]]
   name = "github.com/docker/distribution"
   version = "v2.7.1"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/cherryservers/cherrygo"
