--- a/test/e2e/provisioning/testdata/machinedeployment-cherryservers.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-cherryservers.yaml
@@ -28,6 +28,7 @@ spec:
             plan: "Smart8"
             location: "EU-East-1"
             projectID: "<< PROJECT_ID >>"
+            teamID: "<< TEAM_ID >>"
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
