--- a/examples/cherryservers-machinedeployment.yaml
+++ b/examples/cherryservers-machinedeployment.yaml
@@ -49,7 +49,7 @@ spec:
             # Optional
             labels:
               my: label
-          operatingSystem: "Ubuntu 18.04 64bit"  # Or "CentOS 7 64bit"
+          operatingSystem: "ubuntu"  # Or "centos"
           operatingSystemSpec:
             distUpgradeOnBoot: false
       versions:
