--- a/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-vsphere.yaml
@@ -35,6 +35,7 @@ spec:
             datastore: exsi-nas
             cpus: 2
             MemoryMB: 2048
+            diskSizeGB: 25
           operatingSystem: "<< OS_NAME >>"
           operatingSystemSpec:
             distUpgradeOnBoot: false
