--- a/pkg/userdata/coreos/testdata/v1.12.0-vsphere-overwrite-cloudconfig.yaml
+++ b/pkg/userdata/coreos/testdata/v1.12.0-vsphere-overwrite-cloudconfig.yaml
@@ -185,8 +185,10 @@ storage:
           modprobe ip_vs_wrr
           modprobe ip_vs_sh
 
-          # nf_conntrack_ipv4 got removed in the kernel version 5.0
-          if [ "${kernel_main_version}" -le "4" ]; then
+          # nf_conntrack_ipv4 got removed in the kernel version 4.19
+          if [[ "${kernel_main_version}" -ge "5" ]] || [[ "${kernel}" == 4.19* ]] || [[ "${kernel}" == 4.20* ]]; then
+            modprobe nf_conntrack
+          else
             modprobe nf_conntrack_ipv4
           fi
 
