Address code review comments

--- a/examples/hetzner-machinedeployment.yaml
+++ b/examples/hetzner-machinedeployment.yaml
@@ -49,7 +49,7 @@ spec:
             location: "fsn1"
             # Optional: network IDs or names
             networks:
-              - ""
+              - "<< YOUR_NETWORK >>"
             # Optional
             labels:
               my: label
