--- a/pkg/userdata/coreos/testdata/v1.11.2-vsphere-static-ipconfig.yaml
+++ b/pkg/userdata/coreos/testdata/v1.11.2-vsphere-static-ipconfig.yaml
@@ -331,7 +331,7 @@ storage:
           mkdir -p /etc/cni/net.d
           mkdir -p /opt/cni/bin
           if [ ! -f /opt/cni/bin/loopback ]; then
-              curl -L https://github.com/containernetworking/plugins/releases/download/v0.6.0/cni-plugins-amd64-v0.6.0.tgz | tar -xvzC /opt/cni/bin -f -
+              curl -L https://github.com/containernetworking/plugins/releases/download/v0.8.2/cni-plugins-linux-amd64-v0.8.2.tgz | tar -xvzC /opt/cni/bin -f -
           fi
 
           if [[ ! -x /opt/bin/health-monitor.sh ]]; then
