Restrict file system permissions for config files
Set mode for files with potentially sensitive information like cloud
credentials to 0600. This change is for CentOS and Ubuntu workers,
CoreOS already had proper permissions.

--- a/pkg/userdata/centos/testdata/kubelet-v1.12-aws-external.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.12-aws-external.yaml
@@ -161,10 +161,12 @@ write_files:
     WantedBy=multi-user.target
 
 - path: "/etc/kubernetes/cloud-config"
+  permissions: "0600"
   content: |
     {aws-config:true}
 
 - path: "/etc/kubernetes/bootstrap-kubelet.conf"
+  permissions: "0600"
   content: |
     apiVersion: v1
     clusters:
