--- a/pkg/userdata/centos/testdata/kubelet-v1.12-vsphere.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.12-vsphere.yaml
@@ -170,10 +170,12 @@ write_files:
     WantedBy=multi-user.target
 
 - path: "/etc/kubernetes/cloud-config"
+  permissions: "0600"
   content: |
     {config:true}
 
 - path: "/etc/kubernetes/bootstrap-kubelet.conf"
+  permissions: "0600"
   content: |
     apiVersion: v1
     clusters:
