--- a/pkg/userdata/ubuntu/testdata/openstack-overwrite-cloud-config.yaml
+++ b/pkg/userdata/ubuntu/testdata/openstack-overwrite-cloud-config.yaml
@@ -248,12 +248,14 @@ write_files:
     Environment="KUBELET_EXTRA_ARGS=--resolv-conf=/run/systemd/resolve/resolv.conf"
 
 - path: "/etc/kubernetes/cloud-config"
+  permissions: "0600"
   content: |
     custom
     cloud
     config
 
 - path: "/etc/kubernetes/bootstrap-kubelet.conf"
+  permissions: "0600"
   content: |
     apiVersion: v1
     clusters:
