--- a/pkg/userdata/centos/testdata/kubelet-v1.11-aws.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.11-aws.yaml
@@ -146,8 +146,7 @@ write_files:
       --cloud-config=/etc/kubernetes/cloud-config \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
-      --lock-file=/tmp/kubelet.lock \
-      --pod-infra-container-image=
+      --lock-file=/tmp/kubelet.lock
 
     [Install]
     WantedBy=multi-user.target
@@ -182,7 +181,7 @@ write_files:
     apiVersion: kubelet.config.k8s.io/v1beta1
     cgroupDriver: systemd
     clusterDomain: cluster.local
-    clusterDNS:    
+    clusterDNS:
     rotateCertificates: true
     podManifestPath: /etc/kubernetes/manifests
     readOnlyPort: 0
@@ -201,7 +200,7 @@ write_files:
     authentication:
       x509:
         clientCAFile: /etc/kubernetes/pki/ca.crt
-      webhook: 
+      webhook:
         enabled: true
       anonymous:
         enabled: false
