--- a/pkg/userdata/coreos/testdata/v1.9.2-disable-auto-update-aws.yaml
+++ b/pkg/userdata/coreos/testdata/v1.9.2-disable-auto-update-aws.yaml
@@ -116,9 +116,10 @@ systemd:
           --cloud-config=/etc/kubernetes/cloud-config \
           --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
           --exit-on-lock-contention \
-          --lock-file=/tmp/kubelet.lock \
-          --pod-infra-container-image=
+          --lock-file=/tmp/kubelet.lock
         ExecStop=-/usr/bin/rkt stop --uuid-file=/var/cache/kubelet-pod.uuid
+        Restart=always
+        RestartSec=10
         [Install]
         WantedBy=multi-user.target
 
@@ -145,14 +146,14 @@ storage:
     - path: "/etc/kubernetes/kubelet.conf"
       filesystem: root
       mode: 0644
-      contents: 
+      contents:
         inline: |
           kind: KubeletConfiguration
           apiVersion: kubelet.config.k8s.io/v1beta1
           cgroupDriver: systemd
           clusterDomain: cluster.local
           clusterDNS:
-            - "10.10.10.10"    
+            - "10.10.10.10"
           rotateCertificates: true
           podManifestPath: /etc/kubernetes/manifests
           readOnlyPort: 0
@@ -171,7 +172,7 @@ storage:
           authentication:
             x509:
               clientCAFile: /etc/kubernetes/pki/ca.crt
-            webhook: 
+            webhook:
               enabled: true
             anonymous:
               enabled: false
