--- a/pkg/userdata/sles/testdata/multiple-dns-servers.yaml
+++ b/pkg/userdata/sles/testdata/multiple-dns-servers.yaml
@@ -132,8 +132,7 @@ write_files:
       --hostname-override=node1 \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
-      --lock-file=/tmp/kubelet.lock \
-      --pod-infra-container-image=
+      --lock-file=/tmp/kubelet.lock
 
     [Install]
     WantedBy=multi-user.target
