--- a/pkg/userdata/ubuntu/testdata/multiple-ssh-keys.yaml
+++ b/pkg/userdata/ubuntu/testdata/multiple-ssh-keys.yaml
@@ -226,8 +226,7 @@ write_files:
       --hostname-override=node1 \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
-      --lock-file=/tmp/kubelet.lock \
-      --pod-infra-container-image=
+      --lock-file=/tmp/kubelet.lock
 
     [Install]
     WantedBy=multi-user.target
@@ -318,7 +317,7 @@ write_files:
     cgroupDriver: systemd
     clusterDomain: cluster.local
     clusterDNS:
-      - "10.10.10.10"    
+      - "10.10.10.10"
     rotateCertificates: true
     podManifestPath: /etc/kubernetes/manifests
     readOnlyPort: 0
@@ -337,7 +336,7 @@ write_files:
     authentication:
       x509:
         clientCAFile: /etc/kubernetes/pki/ca.crt
-      webhook: 
+      webhook:
         enabled: true
       anonymous:
         enabled: false
