--- a/pkg/userdata/ubuntu/testdata/vsphere-mirrors.yaml
+++ b/pkg/userdata/ubuntu/testdata/vsphere-mirrors.yaml
@@ -236,8 +236,8 @@ write_files:
       --hostname-override=node1 \
       --dynamic-config-dir /etc/kubernetes/dynamic-config-dir \
       --exit-on-lock-contention \
-      --lock-file=/tmp/kubelet.lock \
       --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1
+      --lock-file=/tmp/kubelet.lock
 
     [Install]
     WantedBy=multi-user.target
@@ -330,7 +330,7 @@ write_files:
     cgroupDriver: systemd
     clusterDomain: cluster.local
     clusterDNS:
-      - "10.10.10.10"    
+      - "10.10.10.10"
     rotateCertificates: true
     podManifestPath: /etc/kubernetes/manifests
     readOnlyPort: 0
@@ -349,7 +349,7 @@ write_files:
     authentication:
       x509:
         clientCAFile: /etc/kubernetes/pki/ca.crt
-      webhook: 
+      webhook:
         enabled: true
       anonymous:
         enabled: false
